# greybeam

./: .gitignore  README.md  devenv.nix  pyproject.toml
db/migrations/clickhouse/: 20250528192934_create_raws_database.sql  20250528192942_create_raws_playstation_games.sql  20250528192946_create_raws_playstation_prices.sql  20250528192952_create_raws_steam_games.sql  20250528192955_create_raws_steam_prices.sql  20250528193001_create_raws_xbox_games.sql  20250528193005_create_raws_xbox_prices.sql  20250528193021_function_parseArrayString.sql  20250528193029_seed_raws_playstation_games.sql  20250528193032_seed_raws_playstation_prices.sql  20250528193039_seed_raws_steam_games.sql  20250528193042_seed_raws_steam_prices.sql  20250528193046_seed_raws_xbox_games.sql  20250528193049_seed_raws_xbox_prices.sql  20250528194247_create_games_table.sql  20250528194255_seed_games_table.sql  20250528194302_create_prices_table.sql  20250528194311_seed_prices_table copy 2.sql  20250528194311_seed_prices_table.sql  20250528194359_create_pg_mirror_database.sql  20250528194413_create_pg_games_table.sql  20250528194418_create_pg_prices_table.sql  20250528194430_seed_pg_games_table.sql  20250528194434_seed_pg_prices_table.sql  20250529142858_create_greybeam_requests_table.sql
db/migrations/postgres/: 20250528154342_create_gaming_tables_by_platform.sql  20250528160250_create_gaming_tables.sql
docs/: notes.md  setup.md
src/: main.py
src/core/: db.py  transpiler.py  types.py
src/routes/: query.py
